--- a/.travis.yml
+++ b/.travis.yml
@@ -6,11 +6,10 @@ services:
 env:
   global:
     DOCKER_COMPOSE_VERSION: 1.5.2
-
-  VIRGO_VERSION:
-    - 3.7.0
-    - 3.6.4
-    - 3.6.4-jre7-alpine
+  matrix:
+    - VIRGO_VERSION=3.7.0
+    - VIRGO_VERSION=3.6.4
+    - VIRGO_VERSION=3.6.4-jre7-alpine
 
 script:
   - echo $VIRGO_VERSION
